# libex

./: CMakeLists.txt  README.md  changelog.md  config.in
cmake/: ex.cmake  pdb.cmake
doc/platform/: Compilers.docx  Detect the operating system type.docx  OperatingSystems.docx  Processors.docx
include/ex/: algo  assert  cprint  ct  debug  exception  expected  format  interface  iterator  macro  meta  mp  placebo  platform  pool  random  range_check  scopeguard  semantic  string  utility  version  window
include/ex/common/: policy  type
include/ex/container/: pool  ring_buffer
include/ex/ct/: basename  char  charset  math  meta_str  set_char  strcat  streq  strfill  string  strlen  substr  tools
include/ex/encoding/: word  word16
include/ex/iterator/: any_iterator  index_iterator  make
include/ex/log/: abstract  autotag  logger  stdlogger  stdstream
include/ex/meta/: concept  math_type  pack  selector  sequence  traits  type_assert
include/ex/platform/: detect  macro
include/ex/policy/: index_check  notice  pool  threading
include/ex/policy/pool/: destroy  size
include/ex/stream/: buffered  file  interface  memory  tmp
samples/: CMakeLists.txt  iterator.cpp
src/: assert.cpp  cprint.cpp  debug.cpp  format.cc  placebo.cpp  platform.cpp  string.cpp  version.cpp
src/stream/: buffered.cpp  file.cpp  interface.cpp  memory.cpp  tmp.cpp
test/: CMakeLists.txt  algo.cpp  expected.cpp  range_check.cpp  test1.cpp  window.cpp
test/container/: ring_buffer.cpp
test/ct/: basename.cpp  char.cpp  charset.cpp  math.cpp  meta_str.cpp  set_char.cpp  strcat.cpp  streq.cpp  strfill.cpp  strlen.cpp  substr.cpp
test/encoding/: word16.cpp
test/meta/: traits.cpp
test/stream/: buffered.cpp  file.cpp  memory.cpp  stream_test_tools.hpp
